--- a/UIKit - Swift 5/Checklists/Checklists/Base.lproj/Main.storyboard
+++ b/UIKit - Swift 5/Checklists/Checklists/Base.lproj/Main.storyboard
@@ -16,14 +16,14 @@
                         <color key="backgroundColor" systemColor="systemBackgroundColor" cocoaTouchSystemColor="whiteColor"/>
                         <prototypes>
                             <tableViewCell clipsSubviews="YES" contentMode="scaleToFill" preservesSuperviewLayoutMargins="YES" selectionStyle="default" accessoryType="checkmark" indentationWidth="10" reuseIdentifier="ChecklistItem" id="aeU-Vi-mWe">
-                                <rect key="frame" x="0.0" y="28" width="414" height="42.666667938232422"/>
+                                <rect key="frame" x="0.0" y="28" width="414" height="43"/>
                                 <autoresizingMask key="autoresizingMask"/>
                                 <tableViewCellContentView key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" preservesSuperviewLayoutMargins="YES" insetsLayoutMarginsFromSafeArea="NO" tableViewCell="aeU-Vi-mWe" id="16o-HO-LbV">
-                                    <rect key="frame" x="0.0" y="0.0" width="370" height="42.666667938232422"/>
+                                    <rect key="frame" x="0.0" y="0.0" width="370" height="43"/>
                                     <autoresizingMask key="autoresizingMask"/>
                                     <subviews>
                                         <label opaque="NO" userInteractionEnabled="NO" tag="1000" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Label" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="Mxl-9l-qqu">
-                                            <rect key="frame" x="20" y="11.000000000000002" width="42" height="20.666666666666671"/>
+                                            <rect key="frame" x="20" y="11" width="42" height="21"/>
                                             <fontDescription key="fontDescription" type="system" pointSize="17"/>
                                             <nil key="textColor"/>
                                             <nil key="highlightedColor"/>
@@ -45,7 +45,7 @@
                     <navigationItem key="navigationItem" title="Checklists" id="WrC-b8-uNQ">
                         <barButtonItem key="rightBarButtonItem" systemItem="add" id="H3I-sm-LwG">
                             <connections>
-                                <segue destination="p6i-D7-Dyr" kind="show" id="Rzb-Dn-wJR"/>
+                                <segue destination="p6i-D7-Dyr" kind="show" identifier="AddItem" id="Rzb-Dn-wJR"/>
                             </connections>
                         </barButtonItem>
                     </navigationItem>
